# nyanko

./: .gitignore  Cargo.toml
nyanko/: Cargo.toml
nyanko-anilist/: Cargo.toml
nyanko-anilist/src/: lib.rs  login.rs  search.rs  user.rs
nyanko-c/: Cargo.toml
nyanko-c/src/: init.rs  lib.rs  search.rs
nyanko-core/: Cargo.toml
nyanko-core/src/: anilist.rs  lib.rs  nyanko.rs  settings.rs
nyanko-core/src/accounts/: mod.rs
nyanko/frontend/: craco.config.js  package.json
nyanko/frontend/src/: App.css  App.tsx  index.tsx
nyanko/frontend/src/semantic-ui/: theme.config
nyanko/qml/: AccountPage.qml  Accounts.qml  AniGrid.qml  AniPage.qml  Search.qml  SearchBar.qml  WelcomePage.qml  main.qml
nyanko/qml/login/: AniListLogin.qml
nyanko/src/: core.rs  gui.rs  main.rs  model.rs  resource.rs  server.rs
nyanko/static/: index.html
