[package]
name = "nyanko-anilist"
version = "0.1.0"
authors = ["Hiruna Kethaka Jayamanne <hirunav2@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
once_cell = "1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.2"
