[package]
name = "nyanko-core"
version = "0.1.0"
authors = ["Hiruna Kethaka Jayamanne <hirunav2@gmail.com>"]
edition = "2018"

[dependencies]
nyanko-anilist = { path = "../nyanko-anilist" }

futures = "0.3"
nosqlite = { git = "https://github.com/HiruNya/nosqlite.git", rev = "ec3387b243fdee18116656252dc8b42111d11793" }
once_cell = "1"
serde = "1"
toml = "0.5"
tokio = { version = "0.2", features = ["sync", "rt-core"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
