[package]
name = "nyanko"
version = "0.1.0"
authors = ["Hiruna Kethaka Jayamanne <hirunav2@gmail.com>"]
edition = "2018"

[dependencies]
nyanko-core = { path = "../nyanko-core" }
nyanko-anilist= { path = "../nyanko-anilist" }

cstr = "0.1"
log = "0.4"
once_cell = "1"
pretty_env_logger = "0.3"
qmetaobject = { git = "https://github.com/woboq/qmetaobject-rs.git", rev = "f45dfc1" } # version 1.4
