[package]
name = "nyanko"
version = "0.1.0"
authors = ["Hiruna Kethaka Jayamanne <hirunav2@gmail.com>"]
edition = "2018"

[dependencies]
nyanko-core = { path = "../nyanko-core" }
nyanko-anilist= { path = "../nyanko-anilist" }

futures = "0.3"
http = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
warp = "0.2"
web-view = "0.6"
tokio = { version = "0.2", features = ["sync", "rt-core"] }
